# ai.play

./: .gitnore  LICENCE  README.md  aiplay-0.1.0.vsix  install.sh  pyproject.toml  sample.aip
.github/workflows/: release.yml
python/: README.md  __init__.py  __main__.py  admin_engine.py  ai_yes.py  aiplay.py  ast_nodes.py  build_windows.bat  call_handler.py  format_detector.py  installer.nsi  intent_engine.py  interpreter.py  lexer.py  mcp_engine.py  memory_engine.py  module_engine.py  notify_engine.py  parser.py  runtime.py  sandbox_engine.py  server.py  skills_engine.py  ui_server.py  user_memory.py  video_engine.py  vision_trainer.py  voice_engine.py
