[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aiplay"
version = "0.7.0"
description = "ai.play — The programming language for AI systems"
readme = "README.md"
license = {text = "SARL v1.1"}
authors = [
    {name = "sintaxsaint", url = "https://github.com/sintaxsaint"}
]
keywords = ["ai", "language", "local", "llm", "assistant", "offline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
voice = ["speechrecognition", "pyttsx3"]
vision = ["opencv-python", "pillow"]
full = ["speechrecognition", "pyttsx3", "opencv-python", "pillow", "diffusers", "torch"]

[project.scripts]
aip = "aiplay.aiplay:main"

[project.urls]
Homepage = "https://github.com/sintaxsaint/ai.play"
"Module Store" = "https://sintaxsaint.pages.dev"
"Bug Reports" = "https://github.com/sintaxsaint/ai.play/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aiplay*"]

[tool.setuptools.package-data]
aiplay = ["*.py"]
